# s2-pmtiles

./: .gitignore  .npmignore  Cargo.toml  README.md  TODO  build.ts  bun.lockb  bunfig.toml  package.json  tsconfig.eslint.json  tsconfig.json
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md
.github/workflows/: coveralls.yml  test.yml
docs/: hierarchy.html  index.html  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: BufferReader.html  BufferWriter.html  DirCache.html  FetchReader.html  PMTilesReader.html  PMTilesWriter.html  S2PMTilesReader.html  S2PMTilesWriter.html
docs/enums/: Compression.html  TileType.html
docs/functions/: bytesToHeader.html  concatUint8Arrays.html  deserializeDir.html  findTile.html  getUint64.html  headerToBytes.html  readVarint.html  readVarintRemainder.html  s2BytesToHeader.html  s2HeaderToBytes.html  serializeDir.html  setUint64.html  tileIDToZxy.html  writeBigVarint.html  writeBigVarintHigh.html  writeBigVarintLow.html  writeVarint.html  zxyToTileID.html
docs/interfaces/: BufferPosition.html  Entry.html  Header.html  LayerFields.html  LayerMetaData.html  LayerMetaValue.html  Metadata.html  MetadataBase.html  Reader.html  S2Entries.html  S2Header.html  S2Metadata.html  TileStatsMetadata.html  VectorLayerMetaData.html  VectorTileLayerStats.html  VectorTileStats.html  Writer.html
docs/types/: Compressor.html  DecompressFunc.html  DrawType.html  Face.html  LLBounds.html  LayerFields.html  LayerMetaData.html  Point.html  Tile.html  TileBounds.html  VectorLayersMetaData.html
rust/: bit_cast.rs  buffer.rs  cache.rs  lib.rs  pmtiles.rs  reader.rs  s2pmtiles.rs  writer.rs
s2-pmtiles-spec/: CHANGELOG.md  README.md
s2-pmtiles-spec/1.0.0/: README.md
src/: browser.ts  cache.ts  file.ts  index.ts  metadata.ts  mmap.ts  pmtiles.ts  reader.ts  s2pmtiles.ts  varint.ts  writer.ts
test/: cache.test.ts  pmtiles.test.ts  polyfill.ts  reader.test.ts  server.ts  varint.test.ts  writer.test.ts
