[package]
name = "s2-pmtiles"
version = "1.0.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library reads/writes The S2 PMTiles 1.0 Specification"
documentation = "https://docs.rs/s2-pmtiles"
homepage = "https://github.com/OpenS2/s2-pmtiles"
repository = "https://github.com/OpenS2/s2-pmtiles"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["/rust", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/node_modules",
    "/s2-pmtiles-spec",
    "/docs",
    "/test",
    "/tools",
    "/src",
]

[lib]
name = "s2_pmtiles"
path = "rust/lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
# Provide impls for types in the Rust core allocation and collections library
alloc = []
# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
# Requires a dependency on the Rust standard library.
std = ["alloc", "flate2"]

[dependencies]
s2-tilejson = "0.5"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = "0.10"
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.3"
# tarpaulin = "*"

[profile.bench]
opt-level = 3
